styles: fix visibility and whitespace of output

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ header .nav__item a {
 
 main {
   display: grid;
-  grid-template-columns: 20% 30% 50%;
+  grid-template-columns: 20% 60% 20%;
   grid-template-rows: auto auto 1fr;
   margin: 25px 3em;
   gap: 20px;
@@ -195,6 +195,7 @@ h2.filename {
 }
 
 .output {
+  white-space: pre;
   font-family: "IBM Plex Mono", monospace;
 }
 
